# file-server

./: CMakeLists.txt  client.py  server.py
Alice/: textAlice.txt
Bob/: tfb.txt
project_demo_video/: All Libraries used.txt  GDrive link to Folder of video.txt  Googe Drive link to 2x Speed Project Demo.txt  Googe Drive link to 6x Speed Project Demo.txt  Googe Drive link to Project Demo Video.txt
s_files/: tfc.txt
src/client/: client.cpp
src/server/: server.cpp
